Fix popover alignment problems
Former-commit-id: ba4f5ffe4b9d4dffc808f7e457b8b37edcf63349

--- a/assets/less/widget.less
+++ b/assets/less/widget.less
@@ -428,44 +428,7 @@ th.ui-th-column div {
 //
 // Popover/Tooltip styles
 //
-.popover {
-    width: auto;
-    max-width: 100%;
-    z-index: 4999;
-    margin-top: -8px;
 
-    ul li { 
-      margin: 0 10px;
-      font-size: 13px; }
-      
-    .large {      
-      .lead {
-        margin-bottom: 0; 
-        font-size: 18px;
-      }
-    }
-    
-    .popover-title {
-      color: @color-white;
-      background-image: -moz-linear-gradient(top , #464646, #313131);
-      background-image: -webkit-linear-gradient(top ,#464646, #313131); 
-      background-image: -ms-linear-gradient(top , #464646, #313131); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#464646, endColorstr=#313131, GradientType=0);
-        
-      a {
-        color: @color-B4;
-        font-size: 14px;
-        margin-top: 6px;
-        
-        &:hover{
-          background-color: transparent;
-        }
-        img {
-          vertical-align: middle;
-          padding-left: 5px;
-        }
-      }
-    }
- }
 .printFooterPopover {
     left: 60% !important;
     .popover-content {
@@ -476,6 +439,37 @@ th.ui-th-column div {
 #printButtonContent {
   text-align: center;
   margin-top: 8px;
+}
+/// Content styles
+#content {
+  .popover {
+    width: auto;
+    max-width: 100%;
+    z-index: 4999;
+  }
+  ul {
+    margin-bottom: 0px
+  }
+  .popover-title {
+    color: @color-white;
+    background-image: -moz-linear-gradient(top , #464646, #313131);
+    background-image: -webkit-linear-gradient(top ,#464646, #313131); 
+    background-image: -ms-linear-gradient(top , #464646, #313131); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#464646, endColorstr=#313131, GradientType=0);
+      
+    a {
+      color: @color-B4;
+      font-size: 14px;
+      margin-top: 6px;
+      
+      &:hover{
+        background-color: transparent;
+      }
+      img {
+        vertical-align: middle;
+        padding-left: 5px;
+      }
+    }
+  }
 }
 //
 // Footer styles
@@ -549,7 +543,44 @@ th.ui-th-column div {
       font-size: 14px;
     }
     
-}
+  }
+  .popover {
+    width: auto;
+    max-width: 100%;
+    z-index: 4999;
+
+    ul li { 
+      margin: 0 10px;
+      font-size: 13px; }
+      
+    .large {      
+      .lead {
+        margin-bottom: 0; 
+        font-size: 18px;
+      }
+    }
+    
+    .popover-title {
+      color: @color-white;
+      background-image: -moz-linear-gradient(top , #464646, #313131);
+      background-image: -webkit-linear-gradient(top ,#464646, #313131); 
+      background-image: -ms-linear-gradient(top , #464646, #313131); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#464646, endColorstr=#313131, GradientType=0);
+        
+      a {
+        color: @color-B4;
+        font-size: 14px;
+        margin-top: 6px;
+        
+        &:hover{
+          background-color: transparent;
+        }
+        img {
+          vertical-align: middle;
+          padding-left: 5px;
+        }
+      }
+    }
+  }
 }
 
 #legendTemplate {
